<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".activity.Register">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center|start">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_close_black_24dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:theme="@style/txtview" />

            <TextView
                android:id="@+id/subline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please enter your details to continue"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:theme="@style/txtview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".95"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/name"
                    style="@style/editext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/enter_your_name"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack" />


                <EditText
                    android:id="@+id/email"
                    style="@style/editext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintVertical_bias="0.055"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/nomber"
                    style="@style/editext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:layout_constraintVertical_bias="0.055"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/firstpass"
                    style="@style/editext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nomber"
                    app:layout_constraintVertical_bias="0.060"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/secondpass"
                    style="@style/editext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/conpassword"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstpass"
                    app:layout_constraintVertical_bias="0.060"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/code"
                    style="@style/editext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/code"
                    android:inputType="text"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondpass"
                    app:layout_constraintVertical_bias="0.060"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />


                <TextView
                    android:id="@+id/creates"
                    style="@style/txtview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start|center"
                    android:padding="5dp"
                    android:text="@string/already"
                    android:theme="@style/txtview" />
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/latoregular"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</layout>