<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.Forogot">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center|start">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_close_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".92"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/forogt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/subline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please enter your register email  to reset your password"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:theme="@style/txtview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/emails"
                style="@style/editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />


            <EditText
                android:id="@+id/newpassword"
                style="@style/editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/editback"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emails"
                app:layout_constraintVertical_bias="0.060"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>