<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".activity.Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center|start">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_close_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".92"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:theme="@style/txtview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/subline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please enter your register email or password to continue"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:theme="@style/txtview" />

            <EditText
                android:id="@+id/editloginemail"
                style="@style/editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:textColor="@color/colorBlack"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorBlack" />


            <EditText
                android:id="@+id/editloginpassword"
                style="@style/editext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/forgotpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:text="@string/forgot"
                    android:theme="@style/txtview" />


                <TextView
                    android:id="@+id/create"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Register"
                    android:theme="@style/txtview" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnlogin"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".08"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create"
            app:layout_constraintVertical_bias="0.040"
            tools:layout_editor_absoluteX="0dp" />


    </LinearLayout>
</layout>